# gargoyle

./: Cargo.toml  README.md  web_monitor_email.env
examples/: multiple_monitors_stdout.rs  web_monitor_email.rs
src/: lib.rs  monitor.rs  notify.rs  schedule.rs
src/alert/: email.rs  mod.rs  stdout.rs
src/modules/: mod.rs
src/modules/monitor/: local.rs  mod.rs  web.rs
src/modules/notify/: email.rs  mod.rs  stdout.rs
src/monitor/: local.rs  mod.rs  web.rs
src/schedule/: mod.rs
