[package]
name = "gargoyle"
version = "0.1.3"
edition = "2021"
authors = ["Mason Soroka-Gill <Mordinel@pm.me>"]
repository = "https://github.com/Mordinel/gargoyle"
description = "A monitoring and alerting framework"
readme = "README.md"
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[profile.release]
opt-level = 3
strip = true
lto = "fat"

[features]
email-notifier = ["dep:lettre", "dep:lettre_email"]
web-monitor = ["dep:reqwest"]
local-monitor = ["dep:sysinfo"]

[dependencies]
log = "0.4.20"
rayon = "1.8.1"
lettre = { version = "0.11.4", optional = true }
lettre_email = { version = "0.9.4", optional = true }
reqwest = { version = "0.11.24", features = ["blocking"], optional = true }
sysinfo = { version = "0.30.5", optional = true }

[dev-dependencies]
env_logger = "0.11.2"

[[example]]
name = "multiple_monitors_stdout"
crate-type = ["bin"]
path = "examples/multiple_monitors_stdout.rs"
required-features = ["web-monitor", "local-monitor"]

[[example]]
name = "web_monitor_email"
crate-type = ["bin"]
path = "examples/web_monitor_email.rs"
required-features = ["web-monitor", "email-notifier"]

