[package]
name = "gargoyle"
version = "0.1.5"
edition = "2021"
authors = ["Mason Soroka-Gill <Mordinel@pm.me>"]
repository = "https://github.com/Mordinel/gargoyle"
description = "A monitoring and alerting framework"
readme = "README.md"
license = "Apache-2.0"

[profile.release]
opt-level = 3
strip = true
lto = "fat"

[dependencies]
log = "0.4.20"
rayon = "1.8.1"

[dev-dependencies]
env_logger = "0.11.2"

